[package]
name = "raytracer"
version = "0.1.0"
authors = ["Malte Blomqvist <blomqvist.malte@telia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raytracer"
path = "src/lib.rs"

[[bin]]
name = "raytracer"
path = "src/bin.rs"

[dependencies]
image = "0.23.11"
vecmath = "1.0.0"